2014-05-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Change getSchedule to use List argument
	* inst/include/rquantlib_internal.h: Idem

2014-04-06  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (buildTermStructure): Simplified interface
	* inst/include/rquantlib_internal.h: Corresponding declation
	* src/bonds.cpp: Use simpler interface to builtTermStructure()

2014-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Finishing conversion to Rcpp Attributes
	* R/bond.R: More corresponding changes

	* src/utils.cpp: Retire getDoubleVector() helper
	* src/bonds.cpp: Corresponding adjustments
	* R/bond.R: Idem
	* man/bond.Rd: Use vector() for empty vector
	* man/FloatingRateBond.Rd: Idem
	* tests/RQuantLib.R*: Idem

2014-04-04  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: More Rcpp Attributes
	* R/bond.R: More corresponding changes

2014-04-03  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: More Rcpp Attributes
	* R/bond.R: More corresponding changes

2014-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: More Rcpp Attributes
	* R/bond.R: More corresponding changes

2014-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Partially changed to use Rcpp Attributes
	* R/bond.R: Corresponding changes

2014-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/curves.cpp: Some updates reflecting newer Rcpp

2014-03-30  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp: Changed to use Rcpp Attributes
	* R/option.R: Changed calls accordingly
	* R/arrays.R: Idem
	* man/AmericanOption.Rd: Updated as param. list no longer returned
	* man/EuropeanOption.Rd: Idem

2014-03-29  Dirk Eddelbuettel  <edd@debian.org>

	* src/implieds.cpp: Changed to use Rcpp Attributes
	* R/implieds.R: Changed calls accordingly
	* man/AmericanOptionImpliedVolatility.Rd: Updated
	* man/EuropeanOptionImpliedVolatility.Rd: Updated

2014-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/bermudan.cpp: Changed to use Rcpp Attributes