@@ -1,3 +1,9 @@
+2014-05-18  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/utils.cpp: Change getIborIndex and getFlatCurve to use List
+	* src/bonds.cpp: Idem
+	* inst/include/rquantlib_internal.h: Idem
+
 2014-05-17  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/utils.cpp: Change getSchedule to use List argument
